--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -13,7 +13,7 @@
   }
   
   .logo-image {
-    width: 40px; /* Adjust the size as needed */
+    width: 40px; 
     height: auto;
     margin-right: 10px;
   }
