--- a/src/styles/Features.css
+++ b/src/styles/Features.css
@@ -1,7 +1,7 @@
 .features {
     padding: 50px;
     background-color: #f0f0f0;
-  
+    /* text-align: center; */
   }
   
   .features h2 {
@@ -21,7 +21,7 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    flex: 1 1 300px; 
+    flex: 1 1 300px; /* Responsive */
     max-width: 300px;
   }
   
